[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blend requests"
dynamic = ["version"]
dependencies = [
    "bpy"
]
requires-python = ">= 3.10"
authors = [
{name = "James Crowther", email = "jamesc@crowdrender.com.au"}
]
description = "A library for making network/http requests from within Blender"
readme = "README.md"
license = "GPL-3.0-or-later"