[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "blend_requests"
dynamic = ["version"]
dependencies = [
    "bpy",
    "pyzmq"
]
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
{name = "James Crowther", email = "jamesc@crowdrender.com.au"}
]
description = "A library for making network/http requests from within Blender"
readme = "README.md"
license = "GPL-3.0-or-later"